Bitwise ORs of Subarrays